--- a/FrontendDB/src/containers/Wallet/styles.css
+++ b/FrontendDB/src/containers/Wallet/styles.css
@@ -3,7 +3,7 @@
     flex-direction: row wrap;
     justify-content: flex-start;
     padding: 10px 0 5px 20px;
-    width: 100vw;
+    width: 80vw;
     height: 7vh;
 }
 
